# WasmVM

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ControlInst.cpp  ControlInst.h  Core.cpp  Core.h  Decode.cpp  Decode.h  Fetch.cpp  Fetch.h  Fetcher.cpp  Fetcher.h  LICENSE  Linear_memory_map.txt  LineayMemory.cpp  LineayMemory.h  Loader.cpp  Loader.h  LocalStack.cpp  LocalStack.h  Makefile  Memory.cpp  Memory.h  MemoryInst.cpp  MemoryInst.h  Module.cpp  Module.h  NumericInst.cpp  NumericInst.h  OperandStack.cpp  OperandStack.h  ParaVarInst.cpp  ParaVarInst.h  README.md  README_en.md  (+15 more)
host/: CMakeLists.txt  host.cpp.in
host/spectest/: CMakeLists.txt  spectest.c  spectest.h
host/sysenv/: CMakeLists.txt  compat.hpp  sys_fs.cpp  sys_fs.hpp  sys_proc.cpp  sys_proc.hpp  sysenv.cpp  sysenv.hpp
host/testhost/: CMakeLists.txt  testhost.cpp
src/: Bincode.h  CMakeLists.txt  Stack.cpp  Stack.h  Store.cpp  Store.h  Value.cpp  Value.h  main.cpp
src/Component/: CMakeLists.txt  Core.cpp  Core.h  Decoder.cpp  Decoder.h  Loader.cpp  Loader.h  Util.cpp  Util.h
src/Exception/: CMakeLists.txt  ControlException.cpp  ControlException.h  Exception.cpp  Exception.h  Exceptions.h  LoaderException.cpp  LoaderException.h
src/Instance/: ExportInst.h  FuncInst.h  GlobalInst.h  Instance.h  LoaderInsts.cpp  LoaderInsts.h  MemInst.h  ModuleInst.h  TableInst.h
src/Instruction/: ControlInstr.cpp  ControlInstr.h  Instruction.h  MemoryInstr.cpp  MemoryInstr.h  NumericInstr.cpp  NumericInstr.h  ParametricInstr.cpp  ParametricInstr.h  VariableInstr.cpp  VariableInstr.h
src/Syscall/: CMakeLists.txt  Call20.cpp  Call20.h  Call40.cpp  Call40.h  Syscall.cpp  Syscall.h  Syscode.h
src/exec/: .gitignore  Archive.cpp  Archive.hpp  CMakeLists.txt  CommandParser.cpp  CommandParser.hpp  Linker.cpp  Linker.hpp  ModuleQueue.cpp  ModuleQueue.hpp  ar.cpp  as.cpp  cat.cpp  color.hpp  ld.cpp  readwasm.cpp  wasmvm.cpp
src/exec/objdump/: Stream.cpp  StreamDump.cpp  StreamParse.cpp  objdump.cpp  objdump.hpp
src/exec/wasmvm/: main.c
src/include/: Component.h  Decoder.h  Executor.h  Instanciator.h  Loader.h  LoaderRequest.h  Opcodes.h  Pipeline.h  Request.h  Stack.h  Stage.h  Store.h  Types.hpp  Util.hpp  Validator.h  WasmVM.h  WasmVM.hpp  decode.hpp  defines.h  error.h  exception.hpp  host.hpp  json.hpp  opcode.hpp
src/include/core/: Core.h  Runtime.h  Stack.h  Store.h
src/include/dataTypes/: ConstExpr.h  DescType.h  Entry.h  Frame.h  FuncType.h  FuncType.hpp  Label.h  RefType.h  Value.h  Value.hpp  list.h  list_p.h  list_t.h  queue.h  queue_p.h  queue_t.h  stack.h  stack_p.h  vector.h  vector_p.h  vector_t.h
src/include/instance/: ControlInstrInst.h  DataInst.h  ExportInst.h  ExternType.h  ExternVal.h  FuncInst.h  GlobalInst.h  InstrInst.h  MemInst.h  MemoryInstrInst.h  ModuleInst.h  NumericInstrInst.h  ParametricInstrInst.h  TableInst.h  VariableInstrInst.h
src/include/instances/: ControlInstrInst.h  DataInst.h  DataInst.hpp  ElemInst.h  ElemInst.hpp  ExportInst.h  ExportInst.hpp  FuncInst.h  FuncInst.hpp  GlobalInst.h  GlobalInst.hpp  InstrInst.h  MemInst.h  MemInst.hpp  ModuleInst.h  ModuleInst.hpp  Stack.hpp  Store.hpp  TableInst.hpp  TagInst.hpp
src/include/structures/: WasmData.h  WasmData.hpp  WasmElem.h  WasmElem.hpp  WasmExport.h  WasmExport.hpp  WasmFunc.h  WasmFunc.hpp  WasmGlobal.h  WasmGlobal.hpp  WasmImport.h  WasmImport.hpp  WasmInstr.h  WasmInstr.hpp  WasmMemory.h  WasmModule.h  WasmModule.hpp  WasmTable.h
src/lib/: CMakeLists.txt  Decoder.c  Executor.c  Executor_.h  Loader.c  LoaderRequest.c  Loader_.h  Types.cpp  Utils.c  Utils.h  WasmVM.c  defines.c  error.c  exception.cpp  export.c  free.c  func.c  functype.cpp  global.c  import.c  instance.c  instanciate.cpp  mem.c  store.c  table.c
src/lib/core/: Core.c  Core_.h  Stack.c  Stack_.h  Store.c
src/lib/dataTypes/: Frame.c  Frame_.h  FuncType.c  Label.c  Label_.h  Value.c  list.c  list_.h  list_p.c  list_p_.h  list_t.c  list_t_.h  queue.c  queue_.h  queue_p.c  queue_p_.h  queue_t.c  queue_t_.h  stack.c  stack_p.c  stack_p_.h  vector.c  vector_p.c  vector_p_.h
src/lib/decode/: data.cpp  decode.c  decode.cpp  decode.hpp  elem.cpp  exception.hpp  export.cpp  func.cpp  global.cpp  import.cpp  instr.cpp  memory.cpp  parseFuncBody.c  parseFuncBody.h  sections.c  sections.h  start.cpp  table.cpp  tag.cpp  type.cpp  utils.c  utils.h
src/lib/dump/: data.cpp  dump.cpp  dump.hpp  elem.cpp  export.cpp  func.cpp  global.cpp  import.cpp  instr.cpp  store.cpp  type.cpp
src/lib/encode/: data.cpp  elem.cpp  encode.cpp  encode.hpp  export.cpp  func.cpp  global.cpp  import.cpp  instr.cpp  memory.cpp  table.cpp  type.cpp
src/lib/instance/: ControlInstrInst.c  ExportInst.c  FuncInst.c  GlobalInst.c  InstrInst.c  MemInst.c  MemoryInstrInst.c  ModuleInst.c  NumericInstrInst.c  ParametricInstrInst.c  TableInst.c  VariableInstrInst.c  free.c  module.c
src/lib/instanciator/: Instanciator.c
src/lib/instantiate/: instantiate.c  instrs.c  instrs.h
src/lib/invoke/: RunVisitor.hpp  const.cpp  control.cpp  dispatch.cpp  exception.hpp  exception_instr.cpp  exec.c  exec.h  f32.cpp  f64.cpp  func_invoke.c  gc.cpp  i32.cpp  i64.cpp  invoke.c  invoke.cpp  invoke.h  memory.cpp  numeric.cpp  numeric.hpp  parametric.cpp  reference.cpp  table.cpp  variable.cpp
src/lib/json/: json.cpp
src/lib/parse/: .gitignore  CMakeLists.txt  ErrorListener.cpp  ErrorListener.hpp  Keywords.hpp  Lexer.cpp  Lexer.hpp  Makefile  ParseContext.cpp  ParseContext.hpp  Parser.cpp  Parser.hpp  TextInput.cpp  TextInput.hpp  Token.cpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp  Visitor.cpp  Visitor.hpp  Wat.g4  WatBaseVisitor.h  WatLexer.cpp  WatLexer.h  WatParser.cpp  (+26 more)
test/: CMakeLists.txt  extract_spec_tests.py
test/exec/: CMakeLists.txt
test/harness/: CMakeLists.txt  harness.cpp  harness.hpp  hashmap_t.c  hashmap_t.h  helper.c  helper.h  main.cpp  md5.c  md5.h  utils.c  utils.h
test/parse/: CMakeLists.txt  README.md
test/suite/: CMakeLists.txt  README.md
test/unittests/: CMakeLists.txt  unittest.cpp.in
(+746 files in other folders)
