add_library(wasmvm_runtime OBJECT
	# Numeric
	i32_const.c
	i64_const.c
	f32_const.c
	f64_const.c
	i32_add.c
	i32_sub.c
	i32_mul.c
	i32_div_s.c
	i32_div_u.c
	i32_rem_s.c
	i32_rem_u.c
	i32_and.c
	i32_or.c
	i32_xor.c
	i32_shl.c
	i32_shr_u.c
	i32_shr_s.c
	i32_rotl.c
	i32_rotr.c
	i32_eq.c
	i32_ne.c
	i32_lt_s.c
	i32_le_s.c
	i32_lt_u.c
	i32_le_u.c
	i32_gt_s.c
	i32_ge_s.c
	i32_gt_u.c
	i32_ge_u.c
	i32_clz.c
	i32_ctz.c
	i32_popcnt.c
	i32_eqz.c
	i64_add.c
	i64_sub.c
	i64_mul.c
	i64_div_s.c
	i64_div_u.c
	i64_rem_s.c
	i64_rem_u.c
	i64_and.c
	i64_or.c
	i64_xor.c
	i64_shl.c
	i64_shr_u.c
	i64_shr_s.c
	i64_rotl.c
	i64_rotr.c
	i64_eq.c
	i64_ne.c
	i64_lt_s.c
	i64_le_s.c
	i64_lt_u.c
	i64_le_u.c
	i64_gt_s.c
	i64_ge_s.c
	i64_gt_u.c
	i64_ge_u.c
	i64_clz.c
	i64_ctz.c
	i64_popcnt.c
	i64_eqz.c
	f32_add.c
	f32_sub.c
	f32_mul.c
	f32_div.c
	f32_abs.c
	f32_neg.c
	f32_copysign.c
	f32_ceil.c
	f32_floor.c
	f32_trunc.c
	f32_nearest.c
	f32_eq.c
	f32_ne.c
	f32_lt.c
	f32_le.c
	f32_gt.c
	f32_ge.c
	f32_sqrt.c
	f32_min.c
	f32_max.c
	f64_add.c
	f64_sub.c
	f64_mul.c
	f64_div.c
	f64_abs.c
	f64_neg.c
	f64_copysign.c
	f64_ceil.c
	f64_floor.c
	f64_trunc.c
	f64_nearest.c
	f64_eq.c
	f64_ne.c
	f64_lt.c
	f64_le.c
	f64_gt.c
	f64_ge.c
	f64_sqrt.c
	f64_min.c
	f64_max.c
	i32_wrap_i64.c
	i32_trunc_s_f32.c
	i32_trunc_s_f64.c
	i32_trunc_u_f32.c
	i32_trunc_u_f64.c
	i32_reinterpret_f32.c
	i64_extend_s_i32.c
	i64_extend_u_i32.c
	i64_trunc_s_f32.c
	i64_trunc_s_f64.c
	i64_trunc_u_f32.c
	i64_trunc_u_f64.c
	i64_reinterpret_f64.c
	f32_demote_f64.c
	f32_convert_s_i32.c
	f32_convert_s_i64.c
	f32_convert_u_i32.c
	f32_convert_u_i64.c
	f32_reinterpret_i32.c
	f64_promote_f32.c
	f64_convert_s_i32.c
	f64_convert_s_i64.c
	f64_convert_u_i32.c
	f64_convert_u_i64.c
	f64_reinterpret_i64.c
	# Memory
  memory_size.c
  memory_grow.c
	f32_load.c
	f32_store.c
	f64_load.c
	f64_store.c
	i32_load.c
	i32_load16_s.c
	i32_load16_u.c
	i32_load8_s.c
	i32_load8_u.c
	i32_store.c
	i32_store16.c
	i32_store8.c
	i64_load.c
	i64_load16_s.c
	i64_load16_u.c
	i64_load32_s.c
	i64_load32_u.c
	i64_load8_s.c
	i64_load8_u.c
	i64_store.c
	i64_store16.c
	i64_store32.c
	i64_store8.c
	# Parametric
	drop.c
	select.c
	# Control
	nop.c
	if.c
	else.c
	call.c
	loop.c
	end.c
	block.c
	br.c
	br_if.c
	br_table.c
	return.c
	call_indirect.c
	# Variable
	get_local.c
	set_local.c
	tee_local.c
	get_global.c
	set_global.c
)